[gd_scene load_steps=5 format=3 uid="uid://77dyybbl2koo"]

[ext_resource type="Script" uid="uid://bvy3ljiu3cxvq" path="res://Scripts/Menus/main_menu.gd" id="1_penys"]
[ext_resource type="PackedScene" uid="uid://3r28gkrulsft" path="res://Scenes/Menus/game_button.tscn" id="2_5wi6m"]
[ext_resource type="Theme" uid="uid://bfxs2u7huev6o" path="res://Themes/MainMenuTheme.tres" id="2_aur2u"]
[ext_resource type="PackedScene" uid="uid://nlrt1p2j5jda" path="res://Scenes/Menus/settings.tscn" id="3_5wi6m"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_penys")

[node name="MainMenuButtons" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 100.0
offset_right = 640.0
offset_bottom = 350.0
theme_override_constants/separation = 16

[node name="Play" parent="MainMenuButtons" instance=ExtResource("2_5wi6m")]
layout_mode = 2
text = "Play"

[node name="Settings" parent="MainMenuButtons" instance=ExtResource("2_5wi6m")]
custom_minimum_size = Vector2(140, 50)
layout_mode = 2
text = "Settings"

[node name="Credits" parent="MainMenuButtons" instance=ExtResource("2_5wi6m")]
custom_minimum_size = Vector2(140, 50)
layout_mode = 2
text = "Credits"

[node name="Quit" parent="MainMenuButtons" instance=ExtResource("2_5wi6m")]
layout_mode = 2
text = "Quit"

[node name="Credits" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
color = Color(0.215902, 0.215902, 0.215902, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Credits"]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="Programming" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_aur2u")
text = "Programming:"

[node name="Art" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_aur2u")
text = "Art:"

[node name="Music & Sound" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_aur2u")
text = "Music & Sound:"

[node name="Back" parent="Credits" instance=ExtResource("2_5wi6m")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -60.0
offset_right = 50.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="Settings" parent="." node_paths=PackedStringArray("connection_button", "connection_menu") instance=ExtResource("3_5wi6m")]
visible = false
layout_mode = 1
connection_button = NodePath("../MainMenuButtons/Settings")
connection_menu = NodePath("../MainMenuButtons")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -324.0
offset_top = 10.0
offset_right = 324.0
offset_bottom = 50.0
grow_horizontal = 2
theme = ExtResource("2_aur2u")
text = "Why are you killing all dem cute Lizards :("
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MainMenuButtons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MainMenuButtons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainMenuButtons/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MainMenuButtons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Credits/Back" to="." method="_on_back_pressed"]
